cleanup, update swagger
